--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
     .grid-container {
       display: grid;
-      grid-template-columns: 2fr 1200px 1fr;
+      grid-template-columns: 150px 1fr 80px;
       grid-template-rows: 1fr;
     }
     .content {
@@ -45,6 +45,16 @@
       display: inline-block;
       border-radius: 50%;
     }
+
+    .index-container .change-page {
+      cursor: pointer;
+    }
+    .index-container .change-page:nth-child(1) {
+      padding-bottom: 10px;
+    }
+    .index-container .change-page:nth-child(2) {
+      padding-bottom: 20px;
+    }
     .song-container {
       margin: 20px;
     }
@@ -59,7 +69,7 @@
   </style>
 </head>
 <body>
-<div v-cloak id="app" class="grid-container">
+<div v-cloak id="app" ref="container" class="grid-container">
   <div class="song-container">
     <div
       :class="['song', target === index ? 'selected' : '']"
@@ -76,6 +86,8 @@
     </div>
   </div>
   <div class="index-container">
+    <div @click="scrollPrePage" class="change-page">pre</div>
+    <div @click="scrollNextPage" class="change-page">next</div>
     <div
       v-for="(url, idx) in images[target]" :key="url"
     >
@@ -92,14 +104,15 @@
   let app = new Vue({
     el: '#app',
     data: {
+      elementHeight: 0,
       target: 'perfect',
       currentIdx: 0,
       songs: [{
-        name: 'shallow',
-        index: 'shallow',
-      }, {
         name: 'perfect',
         index: 'perfect',
+      }, {
+        name: 'shallow',
+        index: 'shallow',
       }, {
         name: '梦中的婚礼',
         index: 'weddingOfDream',
@@ -163,12 +176,23 @@
       },
       changeIdx(idx) {
         this.currentIdx = idx
+      },
+      scrollPrePage() {
+        this.$refs.content.scrollBy(0, -this.elementHeight + 80)
+      },
+      scrollNextPage() {
+        this.$refs.content.scrollBy(0, this.elementHeight - 80)
       }
     },
     mounted() {
-      this.$refs.content.style.height = document.documentElement.clientHeight + 'px'
+      this.elementHeight = document.documentElement.clientHeight
+      this.$refs.container.style.height = this.elementHeight + 'px'
     }
   })
+  window.onresize = function () {
+    app.$refs.container.style.height = document.documentElement.clientHeight + 'px'
+    app.elementHeight = document.documentElement.clientHeight
+  }
 </script>
 </body>
 </html>
