--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
       }],
       images: {
         perfect: [
-          'perfect/1.png',
-          'perfect/2.png',
-          'perfect/3.png',
-          'perfect/4.png',
-          'perfect/5.png',
+          'perfect/1.PNG',
+          'perfect/2.PNG',
+          'perfect/3.PNG',
+          'perfect/4.PNG',
+          'perfect/5.PNG',
         ],
         shallow: [
           'shallow/1.png',
